--- a/CommonLibProject/CommonUtils/src/main/res/values/strings.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">CommonUtils</string>
+    <string name="loading_pager_loading">加载中...</string>
+    <string name="loading_pager_net_unavailable">没有网络...</string>
+    <string name="loading_pager_net_timeout">网络链接超时...</string>
+    <string name="loading_pager_empty_data">没有数据...</string>
+    <string name="loading_pager_unknown_error">未知错误...</string>
 </resources>
