--- a/CommonLibProject/CommonUtilsDemo/src/main/res/values/strings.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/values/strings.xml
@@ -92,5 +92,9 @@
     <string name="search">搜索</string>
     <!-- RecyclerViewFragment相关 -->
 
+    <!-- RecyclerViewFragment相关 -->
+    <string name="view_pager">View Pager</string>
+    <!-- RecyclerViewFragment相关 -->
+
     <string name="home_page_link">https://github.com/EvanWang1987</string>
 </resources>
