增加NestingTouchView & DebugFragment, 修复之前BUG

--- a/CommonLibProject/CommonUtilsDemo/src/main/res/values/strings.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/values/strings.xml
@@ -97,8 +97,12 @@
     <!-- ViewPagerFragment相关 -->
 
     <!-- ViewPagerFragment相关 -->
-    <string name="nesting_touch">Nesting Touch</string>
+    <string name="nesting_touch">手势兼容</string>
     <!-- ViewPagerFragment相关 -->
+
+    <!-- DebugFragment相关 -->
+    <string name="debug">Debug</string>
+    <!-- DebugFragment相关 -->
 
     <string name="home_page_link">https://github.com/EvanWang1987</string>
 </resources>
