--- a/CommonLibProject/CommonUtilsDemo/src/main/res/values/strings.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/values/strings.xml
@@ -100,6 +100,10 @@
     <string name="view_pager">View Pager嵌套</string>
     <!-- ViewPagerFragment相关 -->
 
+    <!-- ViewPagerFragment相关 -->
+    <string name="view_pager_nest_multi_horizontal_scroll">View Pager嵌套多重横向滑动</string>
+    <!-- ViewPagerFragment相关 -->
+
     <!-- 嵌套布局相关 -->
     <string name="ver_nest_hor_scroll_view">竖向嵌套横向滑动布局</string>
     <string name="hor_nest_ver_scroll_view">横向嵌套竖向滑动布局</string>
