--- a/CommonLibProject/CommonUtilsDemo/src/main/res/values/strings.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/values/strings.xml
@@ -115,7 +115,7 @@
     <string name="releasing_video_file">正在释放视频文件</string>
     <!-- 视频控制器相关 -->
 
-    <!-- 视频控制器相关 -->
+    <!-- 二维码相关 -->
     <string name="about_qr_code">二维码相关</string>
     <string name="scan">扫一扫</string>
     <string name="scan_from_gallery">从相册中选择</string>
@@ -127,7 +127,15 @@
     <string name="please_input_your_qr_code">请输入你的二维码</string>
     <string name="encoding_qr_bitmap">正在生成二维码图片</string>
     <string name="encode_fail">编码失败</string>
-    <!-- 视频控制器相关 -->
+    <!-- 二维码相关 -->
+
+    <!-- 滑动退出Activity相关 -->
+    <string name="slide_exit_activity">滑动退出Activity</string>
+    <string name="left_to_right_slide_exit">从左向右滑动退出</string>
+    <string name="right_to_left_slide_exit">从右向左滑动退出</string>
+    <string name="top_to_bottom_slide_exit">从上向下滑动退出</string>
+    <string name="bottom_to_top_slide_exit">从下向上滑动退出</string>
+    <!-- 滑动退出Activity相关 -->
 
     <!-- 下拉刷新相关 -->
     <string name="pull_to_refresh">下拉刷新</string>
