--- a/CommonLibProject/CommonUtilsDemo/src/main/res/values/strings.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/values/strings.xml
@@ -24,9 +24,11 @@
     <string name="open_rocket">打开火箭</string>
     <string name="close_rocket">关闭火箭</string>
 
+    <string name="about_thread">线程相关</string>
     <string name="single_producer_consumer">单生产者单消费者演示</string>
     <string name="multi_producer_consumer">多生产者多消费者演示</string>
     <string name="dead_lock">死锁演示</string>
+    <string name="stop_demo">停止演示</string>
 
 
     <string name="time_flag_text_view">带时间标记的TextView</string>
