--- a/CommonLibProject/CommonUtilsDemo/src/main/res/values/strings.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/values/strings.xml
@@ -200,7 +200,8 @@
     <string name="fragment">Fragment</string>
     <string name="jump">跳转</string>
     <string name="jump_back">回退</string>
-    <string name="print_stack">打印Fragment栈</string>
+    <string name="with_extras">携带数据</string>
+    <string name="print_stack">打印栈</string>
     <string name="fragment_back_stack">Fragment回退栈</string>
     <string name="fragment_a">Fragment A</string>
     <string name="jump_fragment_b_with_extra">携带数据跳转到Fragment B</string>
